SERVER-19698: Typo in error message

closes #1006

Signed-off-by: Mark Benvenuto <mark.benvenuto@mongodb.com>